--- a/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-package-search-result.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-package-search-result.component.html
@@ -10,6 +10,7 @@
   <div class="col-md-5 col-sm-12 offcanvas-header d-block py-lg-4 py-3 px-lg-0">
     <ul class="nav nav-pills nav-fill" role="tablist">
       <li class="nav-item" style="padding-bottom: 10px">
+        <!--<a (click)="t()">Confirm Dialog</a>-->
         <a id="a-item-filters" class="nav-link d-flex align-items-center active" href="#item-filters"
            style="justify-content: center"
            data-bs-toggle="tab" role="tab"><i class="fi-list me-2"></i>
