--- a/Frontend/src/app/app-customer/view/shop-cart/shop-cart.component.html
+++ b/Frontend/src/app/app-customer/view/shop-cart/shop-cart.component.html
@@ -224,12 +224,58 @@
       </div>
     </div>
   </div>
-  <div class="offcanvas-footer justify-content-end border-top">
-    <button class="btn btn-light-primary btn-sm" (click)="removeCart()">
+  <div *ngIf="itemOrder.orderId!==''" class="offcanvas-footer justify-content-end border-top">
+    <button class="btn btn-light-primary btn-sm" data-bs-toggle="modal" data-bs-target="#confirm-dialog-cart"
+            (click)="setDialogBox('Do you want to clear the cart?',false,'Remove')">
       <i class="fi-trash"></i> Clear Cart
     </button>
-    <button class="btn btn-light-primary btn-sm" (click)="placeOrder()">
+    <button class="btn btn-light-primary btn-sm" data-bs-toggle="modal" data-bs-target="#confirm-dialog-cart"
+            (click)="setDialogBox('Do you want to submit the cart?',false,'Place')">
       <i class="fi-check-circle"></i> Place Order
     </button>
+  </div>
+  <div *ngIf="itemOrder.orderId===''" class="offcanvas-footer justify-content-end border-top">
+    <button class="btn btn-light-primary btn-sm">
+      <i class="fi-trash"></i> Clear Cart
+    </button>
+    <button class="btn btn-light-primary btn-sm">
+      <i class="fi-check-circle"></i> Place Order
+    </button>
+  </div>
+</div>
+
+<!--c-->
+
+<div id="confirm-dialog-cart" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"
+     style="z-index: 999999999">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header border-none">
+        <div class="d-flex w-100 justify-content-between">
+          <a class="btn btn-icon btn-primary btn-md shadow-sm rounded-circle me-2 mb-0">
+            <!--<i class="fi-alert-triange"></i></a>-->
+            <i class="fi-cart"></i></a>
+          <h5 class="modal-title" style="margin-top: 8px">My Cart</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+      </div>
+      <div class="modal-body">
+        <p id="confMsg" [innerHTML]="confirmation.message"></p>
+      </div>
+      <div *ngIf="!confirmation.reply" class="modal-footer border-none">
+        <button *ngIf="confirmation.messageType==='Place'" type="button" class="btn btn-success btn-sm"
+                (click)="placeOrder()">
+          Yes
+        </button>
+        <button *ngIf="confirmation.messageType==='Remove'" type="button" class="btn btn-success btn-sm"
+                (click)="removeCart()">
+          Yes
+        </button>
+        <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">No</button>
+      </div>
+      <div *ngIf="confirmation.reply" class="modal-footer border-none">
+        <button type="button" class="btn btn-success btn-sm" data-bs-dismiss="modal">Done</button>
+      </div>
+    </div>
   </div>
 </div>
