--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-category/ba-manage-category.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-category/ba-manage-category.component.html
@@ -9,7 +9,7 @@
                   "
 >
   <div class="d-flex flex-sm-row">
-    <button
+    <button id="btnAddCategory"
       class="
                         btn btn-icon btn-outline-primary btn-xs
                         rounded-circle
@@ -20,9 +20,9 @@
       data-bs-target="#add-new-category"
       aria-controls="add-new-category"
       aria-expanded="false"
-      title="Add new item"
-      data-bs-original-title="Add new item"
-      aria-label="Add new item"
+      title="Add new category"
+      data-bs-original-title="Add new category"
+      aria-label="Add new category"
     >
       <i class="fi-plus"></i>
     </button>
@@ -280,7 +280,7 @@
           </a>
         </div>
         <div class="p-2 bd-highlight">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+          <button id="btnCategory{{i}}" class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   [attr.data-bs-target]="'#category' + i"
                   aria-expanded="true" aria-controls="categoryOne" value="{{itemCategoryE.itemCategoryId}}"></button>
         </div>
@@ -288,7 +288,7 @@
       <div class="accordion-collapse collapse" aria-labelledby="headingEdit" data-bs-parent="#category-list"
            id="categoryEdit{{i}}">
         <div class="card card-body border-none">
-          <form #baManageFormCategoryE="ngForm" (ngSubmit)="baManageFormCategoryE.form.valid && onSubmitE(itemCategoryE)" novalidate>
+          <form #baManageFormCategoryE="ngForm" (ngSubmit)="baManageFormCategoryE.form.valid && onSubmitE(itemCategoryE,i)" novalidate>
 
             <div class="row">
               <div class="col-md-8 mb-3">
@@ -461,6 +461,15 @@
       <div class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#category-list"
            id="category{{i}}">
         <div class="accordion-body">
+
+          <div class="row cols-md-12 mt-3">
+            <p class="mb-2 fs-sm text-dark fw-bold">Overview </p>
+            <div class="col">
+              <p class="mb-2 fs-sm text-muted">{{itemCategoryE.description}} </p>
+            </div>
+          </div>
+
+          <p class="mb-2 fs-sm text-dark fw-bold">Includes </p>
 
           <app-ba-manage-item-view [items]="itemCategoryE.items"></app-ba-manage-item-view>
 
