--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item.component.html
@@ -9,7 +9,7 @@
                   "
 >
   <div class="d-flex flex-sm-row">
-    <button
+    <button id="btnAddItem"
       class="
                         btn btn-icon btn-outline-primary btn-xs
                         rounded-circle
@@ -52,7 +52,7 @@
 <div class="collapse" id="add-new-item">
   <div class="card card-body">
 
-    <form #baManageFormItem="ngForm" (ngSubmit)="baManageFormItem.form.valid && onSubmit()" novalidate>
+    <form #baManageFormItem="ngForm" (ngSubmit)="baManageFormItem.form.valid && item.itemImgsRaw.length>=3 && onSubmit()" novalidate>
 
       <div class="row">
         <div class="col-md-12 mb-3">
@@ -332,7 +332,8 @@
             [options]="pondOptions"
             name="imageInput"
             (onaddfile)="pondHandleAddFile($event)"
-            (onremovefile)="pondHandlerRemoveFile($event)">
+            (onremovefile)="pondHandlerRemoveFile($event)"
+            required>
           </file-pond>
           <!--<input class="file-uploader file-uploader-grid" type="file" multiple data-max-file-size="10MB"-->
           <!--accept="image/png, image/jpeg"-->
@@ -342,9 +343,9 @@
         <!--<img [src]="url" style="margin: 3px;height: 200px;width: 300px">-->
         <!--</div>-->
         <div
-          *ngIf="(imageInput.touched || baManageFormItem.submitted) && imageInput.errors?.required"
+          *ngIf="(item.itemImgsRaw.length<3 && baManageFormItem.submitted)"
           class="validErr" style="margin-bottom: 10px">
-          Image is required
+          Minimum 3 images are required
         </div>
       </div>
       <div class="mb-3 py-2">
