--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package.component.html
@@ -9,7 +9,7 @@
                   "
 >
   <div class="d-flex flex-sm-row">
-    <button
+    <button id="btnAddPackage"
       class="
                       btn btn-icon btn-outline-primary btn-xs
                       rounded-circle
