--- a/Frontend/src/app/view/login/login.component.html
+++ b/Frontend/src/app/view/login/login.component.html
@@ -49,6 +49,7 @@
               </div>
             </div>
             <button class="btn btn-primary btn-lg w-100 rounded-pill" type="submit">Sign in</button>
+            <!--<a href="" class="nav-link" data-bs-toggle="modal" data-bs-target="#confirm-dialog">Confirm Dialog</a>-->
           </form>
         </div>
       </div>
@@ -69,3 +70,4 @@
     </p>
   </div>
 </footer>
+<!--<app-dialog-box></app-dialog-box>-->
