--- a/Frontend/src/app/app-shop/view/business-account/ba-order/ba-order-view/ba-order-view.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-order/ba-order-view/ba-order-view.component.html
@@ -32,16 +32,16 @@
     </div>
     <div class="col-2" style="display: grid;align-content: center;justify-content: center">
       <a
-        class="btnView btn  btn-icon border-end-0 border-top-0 border-bottom-0 border-light fs-sm"
+        class="btn btn-icon border-end-0 border-top-0 border-bottom-0 border-light fs-sm"
         type="button" data-bs-toggle="collapse" style="background-color: #e9ad2d;color: white"
         aria-expanded="true"
-        href="#item-list{{orderIndex}}">
+        href="#item-order{{orderIndex}}">
         <i class="fi-eye-on"></i>
       </a>
     </div>
   </div>
 </div>
-<div class="collapse mb-3" id="item-list{{orderIndex}}">
+<div class="collapse mb-3" id="item-order{{orderIndex}}">
   <div class="card card-body" style="border-width: 0px">
     <!--Order detail card 1-->
     <div class="order-detail-card mb-3"
