--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-view/ba-manage-item-view.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-view/ba-manage-item-view.component.html
@@ -7,11 +7,11 @@
         <div class="position-absolute start-0 top-0 pt-3 ps-3"><span class="d-table badge bg-primary cursor-point"><h4
           class="h6 text-light fs-sm" style="margin-bottom: 0px;"><i class="fi-star fs-sm"></i> 4.5 / 5</h4></span>
         </div>
-        <div class="content-overlay end-0 top-0 pt-3 pe-3">
-          <button class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"
-                  data-bs-toggle="tooltip" data-bs-placement="left" title="remove item"><i class="fi-trash"></i>
-          </button>
-        </div>
+        <!--<div class="content-overlay end-0 top-0 pt-3 pe-3">-->
+          <!--<button class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"-->
+                  <!--data-bs-toggle="tooltip" data-bs-placement="left" title="remove item"><i class="fi-trash"></i>-->
+          <!--</button>-->
+        <!--</div>-->
 
         <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
           <mdb-carousel-item *ngFor="let image of item.itemImgs">
@@ -20,60 +20,15 @@
                  alt="First slide">
           </mdb-carousel-item>
         </mdb-carousel>
-        <!--<ngb-carousel *ngIf="item.itemImgs.length>0" [showNavigationArrows]="showNavigationArrows" [showNavigationIndicators]="showNavigationIndicators">-->
-        <!--<ng-template ngbSlide *ngFor="let image of item.itemImgs">-->
-        <!--<div class="mySlides fade" *ngFor="let image of item.itemImgs">-->
-        <!--<img [src]="getImageSrc(image)" alt="Random slide" style="height: 180px;">-->
-        <!--</div>-->
-        <!--<app-image-slider [images]="item.itemImgs"></app-image-slider>-->
-        <!--<div class="carousel-caption">-->
-        <!--<h3></h3>-->
-        <!--<p></p>-->
-        <!--</div>-->
-        <!-- <div class="carousel-caption">
-          <h3>No mouse navigation</h3>
-          <p>This carousel hides navigation arrows and indicators.</p>
-        </div> -->
-        <!--</ng-template>-->
-        <!--</ngb-carousel>-->
-        <!--<div class="tns-carousel-inner">-->
-        <!-- <img *ngIf="item.itemImgs.length>0" style="height: 180px;width: 280px" [src]="getImageSrc(item.itemImgs[0])" alt="Image">
-        <img *ngIf="item.itemImgs.length===0" style="height: 180px;width: 280px" alt="Image"> -->
-        <!--</div>-->
-        <!--<img src="../../../../assets/img/catalog/06.jpg" alt="Image"></div>-->
+
       </div>
       <div class="card-body position-relative pb-3">
 
         <!-- <h4 class="mb-1 fs-xs fw-normal text-uppercase text-primary fw-bold">Not Available</h4> -->
-        <h3 class="h6 mb-2 fs-base"><a class="nav-link" data-bs-toggle="offcanvas"
+        <h3 class="h6 mb-2 fs-base" style="cursor: pointer">
+          <a class="nav-link" data-bs-toggle="offcanvas"
                                        (click)="getItemSelected(item)"
                                        data-bs-target="#item-viewer">{{item.name}}</a></h3>
-        <!-- <div class="d-flex align-items-center text-nowrap">
-          <p class="mb-2 fs-sm text-muted">Quantity </p>
-          <p class="mb-2 fs-sm text-primary fw-bold mx-2"> 250g</p>
-        </div> -->
-        <div class="row g-2">
-          <!-- <div class="col me-sm-1">
-            <div class="bg-dark rounded text-center w-100 h-100 p-2 cursor-point">
-              <i class="fi-dashboard d-block h4 text-light mb-0 mx-center"></i>
-              <span class="fs-xs text-light fw-bold">{{item.itemQty}}</span>
-            </div>
-          </div> -->
-          <!--<div class="col me-sm-1">-->
-          <!--<div class="bg-dark rounded text-center w-100 h-100 p-2 cursor-point">-->
-          <!--<i class="fi-precentage d-block h4 text-light mb-0 mx-center fw-bold"></i>-->
-          <!--<span class="fs-xs text-light fw-bold"  *ngIf="item.itemDiscountType==='None'"> - </span>-->
-          <!--<span class="fs-xs text-light fw-bold" *ngIf="item.itemDiscountType==='Cash'">{{"LKR " + item.itemDiscount}}</span>-->
-          <!--<span class="fs-xs text-light fw-bold" *ngIf="item.itemDiscountType==='Percentage'">{{item.itemDiscount + "%"}}</span>-->
-          <!--</div>-->
-          <!--</div>-->
-          <!--<div class="col me-sm-1">-->
-          <!--<div class="bg-dark rounded text-center w-100 h-100 p-2 cursor-point">-->
-          <!--<i class="fi-cash d-block h4 text-light mb-0 mx-center"></i>-->
-          <!--<span class="fs-xs text-light fw-bold">LKR {{item.itemPrice}}</span>-->
-          <!--</div>-->
-          <!--</div>-->
-        </div>
         <div class="row cols-sm-2 row-cols-md-12"
              style="border-top: 1px solid #eaeaea;border-bottom: 1px solid #eaeaea;margin-top: 10px;margin-bottom: 10px">
           <div class="col" style="padding: 0px">
@@ -99,9 +54,6 @@
               item.discountType==='Cash' ? ('LKR '+item.discount) :
               item.discountType==='Percentage' ? (item.discount + '%') : ''}}
             </p>
-            <!--<p *ngIf="item.itemDiscountType==='None'" class="mb-2 fs-sm text-primary fw-bold">N/A</p>-->
-            <!--<p *ngIf="item.itemDiscountType==='Cash'" class="mb-2 fs-sm text-primary fw-bold">{{"LKR " + item.itemDiscount}}</p>-->
-            <!--<p *ngIf="item.itemDiscountType==='Percentage'" class="mb-2 fs-sm text-primary fw-bold">{{item.itemDiscount + "%"}}</p>-->
           </div>
         </div>
         <div class="fw-bold">
@@ -121,11 +73,6 @@
           <label *ngIf="item.available" class="form-check-label fs-xs fw-normal text-uppercase text-green fw-bold">
             Available</label>
         </div>
-        <!--<div class="form-check form-switch" *ngIf="item.itemAvailable">-->
-        <!--<input class="form-check-input" type="checkbox" checked>-->
-        <!--<label class="form-check-label fs-xs fw-normal text-uppercase text-green fw-bold">-->
-        <!--Available</label>-->
-        <!--</div>-->
       </div>
     </div>
   </div>
