--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package-edit/ba-manage-package-edit.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package-edit/ba-manage-package-edit.component.html
@@ -14,7 +14,7 @@
             <!-- <a class="img-overlay" href="#"></a> -->
             <span class="img-gradient-overlay"></span>
             <!--<div class="position-absolute start-0 top-0 pt-3 ps-3"><span-->
-              <!--class="d-table badge bg-info">{{itemPackage.name}}</span></div>-->
+            <!--class="d-table badge bg-info">{{itemPackage.name}}</span></div>-->
 
             <div class="card-footer border-0 pt-5 pb-4 gy-3 w-100 position-absolute bottom-0 end-0">
               <div class="d-sm-flex justify-content-between align-items-end">
@@ -29,9 +29,10 @@
                 <div class="btn-group ms-n2 ms-sm-5 mt-3 justify-content-end">
                   <a class="btn btn-primary px-3">LKR {{itemPackage.discountedPrice | number:'.2-2'}}</a>
                   <button id="btnPackage{{i}}"
-                    class="btnView btn btn-primary btn-icon border-end-0 border-top-0 border-bottom-0 border-light fs-sm"
-                    type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#package' + i" aria-expanded="true"
-                    aria-controls="packageOne" value="{{itemPackage.itemPackageId}}">
+                          class="btnView btn btn-primary btn-icon border-end-0 border-top-0 border-bottom-0 border-light fs-sm"
+                          type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#package' + i"
+                          aria-expanded="true"
+                          aria-controls="packageOne" value="{{itemPackage.itemPackageId}}">
                     <i class="fi-eye-on"></i>
                   </button>
                   <button
@@ -50,7 +51,9 @@
 
             <div class="content-overlay end-0 top-0 pt-3 pe-3">
               <button class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"
-                      data-bs-toggle="tooltip" data-bs-placement="left" title="remove item">
+                      data-bs-toggle="modal" data-bs-target="#confirm-dialog-package"
+                      (click)="setPackage(itemPackage,i)"
+                      data-bs-placement="left" title="remove item">
                 <i class="fi-trash" style="font-size: 20px"></i>
               </button>
             </div>
@@ -93,7 +96,8 @@
            id="packageEdit{{i}}">
         <div class="card card-body">
           <form #baManageFormPackageE="ngForm"
-                (ngSubmit)="baManageFormPackageE.form.valid && onSubmit(itemPackage,imageInput,i)" novalidate>
+                (ngSubmit)="baManageFormPackageE.form.valid && (itemPackage.itemPkgImgs.length+itemPackage.itemPackageImgs.length)>=3 && onSubmit(itemPackage,imageInput,i)"
+                novalidate>
 
             <div class="row">
               <div class="col-md-12 mb-3">
@@ -433,17 +437,17 @@
                   #imageInput
                   [options]="pondOptions"
                   name="imageInput"
-                  (onaddfile)="pondHandleAddFile($event,'e',itemPackage)"
-                  (onremovefile)="pondHandlerRemoveFile($event,'e',itemPackage)">
+                  (onaddfile)="pondHandleAddFile($event,itemPackage)"
+                  (onremovefile)="pondHandlerRemoveFile($event,itemPackage)">
                 </file-pond>
                 <!--<input class="file-uploader file-uploader-grid" type="file" multiple data-max-file-size="10MB"-->
                 <!--accept="image/png, image/jpeg"-->
                 <!--data-label-idle="&lt;div class=&quot;btn btn-primary mb-3&quot;&gt;&lt;i class=&quot;fi-cloud-upload me-1&quot;&gt;&lt;/i&gt;Upload photos&lt;/div&gt;&lt;br&gt;or drag them in">-->
               </div>
               <div
-                *ngIf="(imageInput.touched || baManageFormPackageE.submitted) && imageInput.errors?.required"
+                *ngIf="((itemPackage.itemPkgImgs.length+itemPackage.itemPackageImgs.length)<3 && baManageFormPackageE.submitted)"
                 class="validErr" style="margin-bottom: 10px">
-                Image is required
+                Minimum 3 images are required
               </div>
               <div class="col-md-4 mb-4" *ngFor='let itemImg of itemPackage.itemPackageImgs;let j = index'>
                 <div style="position: relative" class="delImgT">
@@ -501,7 +505,8 @@
                   <p class="mb-1 fs-sm" style="margin-top: 7px;color: #d48f03;font-weight: bold;text-align: center">
                     {{itemPackage.makeToOrder?'Max':''}} Quantity
                   </p>
-                  <p class="mb-2 fs-sm fw-bold mx-2" style="text-align: center;color: #f29d00">{{itemPackage.quantity}}</p>
+                  <p class="mb-2 fs-sm fw-bold mx-2" style="text-align: center;color: #f29d00">
+                    {{itemPackage.quantity}}</p>
                 </div>
                 <div *ngIf="itemPackage.quantity===0" style="border-right: 1px solid #d3d3d3;margin-top: 22px">
                   <p class="mb-2 fs-sm fw-bold mx-2"
@@ -524,6 +529,16 @@
             </div>
           </div>
 
+          <div>
+            <p class="mb-2 fs-sm text-dark fw-bold">Features </p>
+            <span *ngFor="let itemFeature of itemPackage.itemPackageItemPackageFeatures"
+                  class="bg-success text-light fs-sm btn btn-xs disabled opacity-100 rounded-pill me-2 mb-2 ms-1 mt-1"
+                  style="margin-left: 10px">
+              {{itemFeature.itemPackageFeature.name}}
+              <!--<i class="fi-x fs-xs ms-2"></i>-->
+            </span>
+          </div>
+
           <div class="row cols-md-12 mt-3">
             <p class="mb-2 fs-sm text-dark fw-bold">Overview </p>
             <div class="col">
@@ -531,17 +546,8 @@
             </div>
           </div>
 
-          <div class="row cols-md-12 mt-2">
-            <p class="mb-2 fs-sm text-dark fw-bold">Features </p>
-            <div class="col" *ngFor="let itemFeature of itemPackage.itemPackageItemPackageFeatures">
-            <span class="bg-success text-light fs-sm btn btn-xs disabled opacity-100 rounded-pill me-2 mb-2 ms-1 mt-1">
-              {{itemFeature.itemPackageFeature.name}}
-              <!--<i class="fi-x fs-xs ms-2"></i>-->
-            </span>
-            </div>
-          </div>
-
-          <p class="mb-2 fs-sm text-dark fw-bold" style="margin-bottom: 10px">Includes </p>
+          <p class="mb-2 fs-sm text-dark fw-bold" style="margin-bottom: 10px;margin-top: 15px">
+            Includes </p>
 
           <app-ba-manage-item-view [items]="itemPackage.items"></app-ba-manage-item-view>
 
@@ -612,6 +618,36 @@
                   (click)="addNewPackageFeature()" [disabled]="!isNewFeature">Save
           </button>
         </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--c-->
+
+<div id="confirm-dialog-package" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"
+     style="z-index: 999999999">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header border-none">
+        <div class="d-flex w-100 justify-content-between">
+          <a class="btn btn-icon btn-primary btn-md shadow-sm rounded-circle me-2 mb-0">
+            <i class="fi-shopping-bag"></i></a>
+          <h5 class="modal-title" style="margin-top: 8px">Category</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+      </div>
+      <div class="modal-body">
+        <p [innerHTML]="confirmation.message"></p>
+      </div>
+      <div *ngIf="!confirmation.reply" class="modal-footer border-none">
+        <button type="submit" class="btn btn-success btn-sm"
+                (click)="removePackage()">Yes
+        </button>
+        <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">No</button>
+      </div>
+      <div *ngIf="confirmation.reply" class="modal-footer border-none">
+        <button type="button" class="btn btn-success btn-sm" data-bs-dismiss="modal">Done</button>
       </div>
     </div>
   </div>
