--- a/Frontend/src/app/view/item-package-detail-view/item-package-detail-view.component.html
+++ b/Frontend/src/app/view/item-package-detail-view/item-package-detail-view.component.html
@@ -103,6 +103,16 @@
           </div>
         </div>
 
+        <div>
+          <p class="mb-2 fs-sm text-dark fw-bold">Features </p>
+          <span *ngFor="let itemFeature of itemPackage.itemPackageItemPackageFeatures"
+                class="bg-success text-light fs-sm btn btn-xs disabled opacity-100 rounded-pill me-2 mb-2 ms-1 mt-1"
+                style="margin-left: 10px">
+              {{itemFeature.itemPackageFeature.name}}
+            <!--<i class="fi-x fs-xs ms-2"></i>-->
+            </span>
+        </div>
+
         <div class="row cols-md-12 mt-3">
           <p class="mb-2 fs-sm text-dark fw-bold">Overview </p>
           <div class="col">
@@ -110,17 +120,7 @@
           </div>
         </div>
 
-        <div class="row cols-md-12 mt-2">
-          <p class="mb-2 fs-sm text-dark fw-bold">Features </p>
-          <div class="col" *ngFor="let itemPackageFeature of itemPackage.itemPackageItemPackageFeatures">
-            <span class="bg-success text-light fs-sm btn btn-xs disabled opacity-100 rounded-pill me-2 mb-2 ms-1 mt-1">
-              {{itemPackageFeature.itemPackageFeature.name}}
-              <!--<i class="fi-x fs-xs ms-2"></i>-->
-            </span>
-          </div>
-        </div>
-
-        <div class="row g-4 py-2" style="margin-top: 10px">
+        <div class="row" style="margin-top: 10px">
           <p class="mb-2 fs-sm text-dark fw-bold">Includes </p>
           <!--Item-->
           <div class="col-sm-12 col-md-6 col-xl-6" *ngFor="let itemItemPackage of itemPackage.itemItemPackages">
