--- a/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-search-result-view/item-search-result-view.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-search-result-view/item-search-result-view.component.html
@@ -31,7 +31,9 @@
         <h3 class="h6 fs-base" style="margin-bottom: 0px">
           <a class="nav-link" data-bs-toggle="offcanvas"
              (click)="getItemSelected(item)"
-             data-bs-target="#item-viewer-g" style="font-weight: bold;padding: 0px">{{item.name}}</a>
+             data-bs-target="#item-viewer-g" style="font-weight: bold;padding: 0px;cursor: pointer">
+            {{item.name}}
+          </a>
         </h3>
         <div class="border-top border-light pt-0 mb-2">
 
