--- a/Frontend/src/app/app-shop/view/business-account/ba-order/ba-order-view/ba-order-view.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-order/ba-order-view/ba-order-view.component.html
@@ -12,7 +12,7 @@
     </div>
   </div>
   <div>
-    <div class="text-muted fs-sm mt-1">5 min ago</div>
+    <div class="text-muted fs-sm mt-1">{{getTimeAgo(itemOrder.orderDate)}}</div>
   </div>
 </div>
 <div class="section-second mb-3">
