--- a/Frontend/src/app/view/item-package-detail-view/item-package-detail-view.component.html
+++ b/Frontend/src/app/view/item-package-detail-view/item-package-detail-view.component.html
@@ -132,11 +132,11 @@
                   class="h6 text-light fs-sm" style="margin-bottom: 0px;"><i
                   class="fi-star fs-sm"></i> 4.5 / 5</h4></span>
                 </div>
-                <div class="content-overlay end-0 top-0 pt-3 pe-3">
-                  <button class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"
-                          data-bs-toggle="tooltip" data-bs-placement="left" title="remove item"><i class="fi-trash"></i>
-                  </button>
-                </div>
+                <!--<div class="content-overlay end-0 top-0 pt-3 pe-3">-->
+                  <!--<button class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"-->
+                          <!--data-bs-toggle="tooltip" data-bs-placement="left" title="remove item"><i class="fi-trash"></i>-->
+                  <!--</button>-->
+                <!--</div>-->
 
                 <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
                   <mdb-carousel-item *ngFor="let image of itemItemPackage.item.itemImgs">
