--- a/Frontend/src/app/app-customer/view/customer-account/c-order/c-order-view/c-order-view.component.html
+++ b/Frontend/src/app/app-customer/view/customer-account/c-order/c-order-view/c-order-view.component.html
@@ -25,7 +25,7 @@
             </div>
           </div>
           <div>
-            <div class="text-muted fs-sm mt-1">5 min ago</div>
+            <div class="text-muted fs-sm mt-1">{{getTimeAgo(shopItemOrder.itemOrder.orderDate)}}</div>
           </div>
         </div>
         <div class="section-second mb-3">
