--- a/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-package-search-result.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-package-search-result.component.html
@@ -6,28 +6,51 @@
   </ol>
 </nav>
 
-<div class="row">
-  <div class="col-md-5 col-sm-12 offcanvas-header d-block py-lg-4 py-3 px-lg-0">
-    <ul class="nav nav-pills nav-fill" role="tablist">
-      <li class="nav-item" style="padding-bottom: 10px">
-        <!--<a (click)="t()">Confirm Dialog</a>-->
-        <a id="a-item-filters" class="nav-link d-flex align-items-center active" href="#item-filters"
-           style="justify-content: center"
-           data-bs-toggle="tab" role="tab"><i class="fi-list me-2"></i>
-          <span style="border-right: 1px solid #b9b9b9;padding-right: 20px">Items</span>
-          <span class="" style="margin-left: 20px;font-size: 16px">{{items.length>1 ? items.length+' results':items.length+' result'}}</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a id="a-package-filters" class="nav-link d-flex align-items-center" href="#package-filters"
-           style="justify-content: center"
-           data-bs-toggle="tab" role="tab"><i class="fi-list me-2"></i>
-          <span style="border-right: 1px solid #b9b9b9;padding-right: 20px">Packages</span>
-          <span class="" style="margin-left: 20px;font-size: 16px">{{itemPackages.length>1 ? itemPackages.length+' results':itemPackages.length+' result'}}</span>
-        </a>
-      </li>
-    </ul>
+<div class="row" style="margin-top: 30px">
+  <div class="d-sm-flex align-items-center pb-2 pb-sm-2">
+    <div class="mt-md-n3 w-100">
+      <a class="btn btn-outline-primary btn-lg rounded-pill w-100 d-md-none" href="#account-nav" data-bs-toggle="collapse">
+        <i class="fi-align-justify me-2"></i>Account Menu
+      </a>
+      <div class="row collapse d-md-block justify-content-between" id="account-nav">
+
+        <ul class="nav nav-pills pt-4 pt-md-2 pb-md-2 w-50" role="tablist">
+          <li class="nav-item mb-md-0 me-md-2 pe-md-1">
+            <a id="a-item-filters" class="nav-link active" href="#item-filters" data-bs-toggle="tab" role="tab"><i class="fi-layers mt-n1 me-2 fs-base"></i>
+              <span style="border-right: 1px solid #b9b9b9;padding-right: 20px">Items</span>
+              <span class="" style="margin-left: 20px;font-size: 16px">{{items.length>1 ? items.length+' results':items.length+' result'}}</span>
+            </a></li>
+          <li class="nav-item mb-md-0 me-md-2 pe-md-1">
+            <a id="a-package-filters" class="nav-link" href="#package-filters" data-bs-toggle="tab" role="tab"><i class="fi-archive mt-n1 me-2 fs-base"></i>
+              <span style="border-right: 1px solid #b9b9b9;padding-right: 20px">Packages</span>
+              <span class="" style="margin-left: 20px;font-size: 16px">{{itemPackages.length>1 ? itemPackages.length+' results':itemPackages.length+' result'}}</span>
+          </a></li>
+        </ul>
+      </div>
+
+    </div>
   </div>
+  <!--<div class="col-md-5 col-sm-12 offcanvas-header d-block py-lg-4 py-3 px-lg-0">-->
+    <!--<ul class="nav nav-pills nav-fill" role="tablist">-->
+      <!--<li class="nav-item" style="padding-bottom: 10px">-->
+        <!--&lt;!&ndash;<a (click)="t()">Confirm Dialog</a>&ndash;&gt;-->
+        <!--<a id="a-item-filters" class="nav-link d-flex align-items-center active" href="#item-filters"-->
+           <!--style="justify-content: center"-->
+           <!--data-bs-toggle="tab" role="tab"><i class="fi-list me-2"></i>-->
+          <!--<span style="border-right: 1px solid #b9b9b9;padding-right: 20px">Items</span>-->
+          <!--<span class="" style="margin-left: 20px;font-size: 16px">{{items.length>1 ? items.length+' results':items.length+' result'}}</span>-->
+        <!--</a>-->
+      <!--</li>-->
+      <!--<li class="nav-item">-->
+        <!--<a id="a-package-filters" class="nav-link d-flex align-items-center" href="#package-filters"-->
+           <!--style="justify-content: center"-->
+           <!--data-bs-toggle="tab" role="tab"><i class="fi-list me-2"></i>-->
+          <!--<span style="border-right: 1px solid #b9b9b9;padding-right: 20px">Packages</span>-->
+          <!--<span class="" style="margin-left: 20px;font-size: 16px">{{itemPackages.length>1 ? itemPackages.length+' results':itemPackages.length+' result'}}</span>-->
+        <!--</a>-->
+      <!--</li>-->
+    <!--</ul>-->
+  <!--</div>-->
 </div>
 
 <!-- Sorting-->
@@ -58,7 +81,125 @@
       <div class="">
         <!-- Item-->
 
-        <app-item-search-result-view [items]="items"></app-item-search-result-view>
+        <div class="row g-4 py-1">
+
+          <div class="col-sm-12 col-md-6 col-xl-4" *ngFor="let item of items">
+            <div class="card shadow-sm card-hover border-0 h-100">
+              <div class="tns-carousel-wrapper card-img-top card-img-hover"><a class="img-overlay"></a>
+                <div class="position-absolute start-0 top-0 pt-3 ps-3"
+                     style="width: 95%;display: flex;justify-content: right">
+                  <div *ngIf="item.makeToOrder"
+                       class="d-table badge bg-info">Make To Order
+                  </div>
+                </div>
+                <div class="position-absolute start-0 top-0 pt-3 ps-3"><span
+                  class="d-table badge bg-primary cursor-point"><h4 class="h6 text-light fs-sm"
+                                                                    style="margin-bottom: 0px;"><i
+                  class="fi-star fs-sm"></i> 4.5 / 5</h4></span></div>
+                <div class="content-overlay end-0 top-0"
+                     style="display: flex;justify-content: right;width: 95%;margin-top: 158px;margin-right: 10px">
+                  <button class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"
+                          data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favourite"
+                  (click)="setItemFavourite(item)">
+                    <i *ngIf="!item.favourite" class="fi-heart"></i>
+                    <i *ngIf="item.favourite" class="fi-heart-filled"></i>
+                  </button>
+                </div>
+                <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
+                  <mdb-carousel-item *ngFor="let image of item.itemImgs">
+                    <span style="height: 100%;width: 100%;background-color: rgba(0,0,0,0.25);position: absolute"></span>
+                    <img style="max-height:200px;height: 200px" class="d-block w-100" [src]="getImageSrc(image)"
+                         alt="First slide">
+                  </mdb-carousel-item>
+                </mdb-carousel>
+              </div>
+              <div class="position-relative" style="margin: 15px 15px 0px 15px">
+                <h3 class="h6 fs-base" style="margin-bottom: 0px">
+                  <a class="nav-link" data-bs-toggle="offcanvas"
+                     (click)="getItemSelected(item)"
+                     data-bs-target="#item-viewer-g" style="font-weight: bold;padding: 0px;cursor: pointer">
+                    {{item.name}}
+                  </a>
+                </h3>
+                <div class="border-top border-light pt-0 mb-2">
+
+                  <div class="row cols-sm-2 row-cols-md-12"
+                       style="border-top: 1px solid #eaeaea;border-bottom: 1px solid #eaeaea;margin-top: 10px;margin-bottom: 10px">
+                    <div class="col" style="padding: 0px">
+                      <div *ngIf="item.quantity>0" style="border-right: 1px solid #d3d3d3">
+                        <p class="mb-1 fs-sm" style="margin-top: 7px;color: #d48f03;font-weight: bold;text-align: center">
+                          {{item.makeToOrder?'Max':''}} Quantity
+                        </p>
+                        <p class="mb-2 fs-sm fw-bold mx-2" style="text-align: center;color: #f29d00">{{item.quantity}}</p>
+                      </div>
+                      <div *ngIf="item.quantity===0" style="border-right: 1px solid #d3d3d3;margin-top: 22px">
+                        <p class="mb-2 fs-sm fw-bold mx-2"
+                           style="text-align: center;">
+                  <span style="color: #f24605;padding: 5px;border: 1px solid #f24605;border-radius: 10px">
+                    Out Of Stock
+                  </span>
+                        </p>
+                      </div>
+                    </div>
+                    <div class="col" style="padding: 0px">
+                      <p class="mb-2 fs-sm" style="margin-top: 7px;color: #b94701;font-weight: bold;text-align: center">
+                        Discount </p>
+                      <p class="mb-2 fs-sm text-primary fw-bold" style="text-align: center">
+                        {{item.discountType==='None' ? 'N/A' :
+                        item.discountType==='Cash' ? ('LKR '+item.discount) :
+                        item.discountType==='Percentage' ? (item.discount + '%') : ''}}
+                      </p>
+                    </div>
+                  </div>
+                  <div class="fw-bold"><i class="fi-cash mt-n1 me-2 lead align-middle opacity-70"></i>
+                    <span *ngIf="item.discountType==='None'">LKR {{item.price | number:'.2-2'}}</span>
+                    <span *ngIf="item.discountType!=='None'"
+                          style="text-decoration: line-through;color: red">LKR {{item.price | number:'.2-2'}}</span>
+                    <span *ngIf="item.discountType!=='None'" style="margin-left: 10px">LKR {{item.discountedPrice | number:'.2-2'}}</span>
+                  </div>
+                </div>
+              </div>
+              <div class="card-footer d-flex pt-3 text-nowrap">
+
+                <div class="d-flex align-items-center justify-content-between w-100">
+                  <div class="fs-sm">
+                    <div class="d-flex d-md-block d-lg-flex align-items-start mb-2">
+                      <img class="rounded-circle" src="../../../../../assets/img/37.png" width="48" alt="Annette Black">
+                      <div class="pt-md-2 pt-lg-0 ps-3 ps-md-0 ps-lg-3">
+                        <h2 class="fs-sm mb-0">
+                          <a style="padding: 0px;font-weight: bold" class="nav-link">
+                            {{item.businessProfileCategory.businessProfile.businessName}}
+                          </a>
+                        </h2>
+                        <div class="star-rating">
+                          <i class="star-rating-icon fi-star-filled active"></i>
+                          <i class="star-rating-icon fi-star-filled active"></i>
+                          <i class="star-rating-icon fi-star-filled active"></i>
+                          <i class="star-rating-icon fi-star-filled active"></i>
+                          <i class="star-rating-icon fi-star-filled active"></i>
+                        </div>
+                      </div>
+
+                    </div>
+                  </div>
+                  <div style="display: flex" *ngIf="item.orderDetail!==undefined">
+                    <button style="background-color: #06A773"
+                            class="btn btn-icon btn-sm text-primary rounded-circle"
+                            type="button" data-bs-toggle="tooltip" title="Add to Cart" (click)="addToCart(item,'Item')">
+                      <i class="fi-cart" style="color: white"></i></button>
+                    <div *ngIf="item.orderDetail!==undefined && item.orderDetail.quantity>0"
+                         style="padding: 2px 5px 2px 5px;color: #1b945b;margin-top: 4px;margin-left: 8px;font-weight: bold">
+                      {{item.orderDetail.quantity}}
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <!--<app-item-search-result-view [items]="items"></app-item-search-result-view>-->
 
         <!-- Pagination-->
         <!-- <nav class="border-top pb-md-4 pt-4" aria-label="Pagination">
@@ -244,7 +385,7 @@
                         <button style="background-color: #06A773"
                                 class="btn btn-icon btn-sm text-primary rounded-circle"
                                 type="button" data-bs-toggle="tooltip" title="Add to Cart"
-                                (click)="addToCart(itemPackage)">
+                                (click)="addToCart(itemPackage,'ItemPackage')">
                           <i class="fi-cart" style="color: white"></i></button>
                         <div *ngIf="itemPackage.orderDetail.quantity>0"
                              style="padding: 2px 5px 2px 5px;color: #1b945b;margin-top: 4px;margin-left: 8px;font-weight: bold">
@@ -262,7 +403,7 @@
                    id="ipsr-package{{i}}" style="margin-top: 10px">
                 <div class="accordion-body">
 
-                  <app-item-search-result-view [items]="itemPackage.items"></app-item-search-result-view>
+                  <!--<app-item-search-result-view [items]="itemPackage.items"></app-item-search-result-view>-->
 
                 </div>
               </div>
